Added opening animation and fixed Time input to take Format HH:mm and generall warning cleanup #13