@@ -2,12 +2,11 @@ package at.jku.se.prse.team3;
 
 import javafx.application.Platform;
 import javafx.collections.ObservableList;
-import javafx.scene.Node;
+
 import javafx.scene.chart.BarChart;
-import javafx.scene.chart.XYChart;
+
 import javafx.scene.control.TableView;
-import javafx.scene.control.TextField;
-import org.testfx.api.FxRobot;
+
 import org.testfx.framework.junit.ApplicationTest;
 import javafx.stage.Stage;
 import org.junit.Test;
@@ -16,7 +15,7 @@ import org.testfx.matcher.control.TextInputControlMatchers;
 import org.testfx.util.WaitForAsyncUtils;
 
 import static org.junit.Assert.*;
-import static org.testfx.assertions.api.Assertions.assertThat;
+
 import java.io.IOException;
 import java.time.LocalDate;
 import java.time.LocalTime;
@@ -25,8 +24,7 @@ import java.util.*;
 
 import static junit.framework.TestCase.assertTrue;
 import static org.testfx.api.FxAssert.verifyThat;
-import static org.testfx.matcher.control.LabeledMatchers.hasText;
-import static org.testfx.util.NodeQueryUtils.isVisible;
+
 
 
 // TODO: bugfix clickOn("fahrtenTabelle") funktioniert irgendwie nicht => es selektiert keine Zeile
@@ -35,15 +33,15 @@ public class FahrtenbuchUITest extends ApplicationTest {
     FahrtenbuchUI app;
 
     @Override
-    public void start(Stage stage) {
+    public void start(Stage stage)  {
         try {
-            fahrtenbuch.neueFahrt("Lv-254", LocalDate.now(), LocalTime.now(), LocalTime.now(), 10d, LocalTime.now(), FahrtStatus.ABSOLVIERT, Arrays.asList(""));
-            fahrtenbuch.neueFahrt("GB-214", LocalDate.now(), LocalTime.now(), LocalTime.now(), 10d, LocalTime.now(), FahrtStatus.ABSOLVIERT, Arrays.asList(""));
+            fahrtenbuch.neueFahrt("Lv-254", LocalDate.now(), LocalTime.now(), LocalTime.now(), 10d, LocalTime.now(), FahrtStatus.ABSOLVIERT, List.of(""));
+            fahrtenbuch.neueFahrt("GB-214", LocalDate.now(), LocalTime.now(), LocalTime.now(), 10d, LocalTime.now(), FahrtStatus.ABSOLVIERT, List.of(""));
         } catch (IOException e) {
             System.out.println("FahrtenbuchUITest: Konnte keine neue Fahrten zum Testen eintragen:" + e);
         }
         app = new FahrtenbuchUI(fahrtenbuch);
-        app.start(stage);
+        app.overview(stage);
     }
 
 
@@ -120,8 +118,8 @@ public class FahrtenbuchUITest extends ApplicationTest {
     public void testBerechneKilometerProMonatUndKategorie() throws IOException {
         // Arrange
         Fahrtenbuch fahrtenbuch = new Fahrtenbuch();
-        fahrtenbuch.neueFahrt("KFZ-123", LocalDate.of(2023, 1, 1), LocalTime.of(8, 0), LocalTime.of(9, 0), 100.0, LocalTime.of(1, 0), FahrtStatus.ABSOLVIERT, Arrays.asList("Geschäftlich"));
-        fahrtenbuch.neueFahrt("KFZ-123", LocalDate.of(2023, 2, 1), LocalTime.of(8, 0), LocalTime.of(9, 0), 150.0, LocalTime.of(1, 0), FahrtStatus.ABSOLVIERT, Arrays.asList("Privat"));
+        fahrtenbuch.neueFahrt("KFZ-123", LocalDate.of(2023, 1, 1), LocalTime.of(8, 0), LocalTime.of(9, 0), 100.0, LocalTime.of(1, 0), FahrtStatus.ABSOLVIERT, List.of("Geschäftlich"));
+        fahrtenbuch.neueFahrt("KFZ-123", LocalDate.of(2023, 2, 1), LocalTime.of(8, 0), LocalTime.of(9, 0), 150.0, LocalTime.of(1, 0), FahrtStatus.ABSOLVIERT, List.of("Privat"));
 
         // Act
         Map<YearMonth, Map<String, Double>> result = fahrtenbuch.berechneKilometerProMonatUndKategorie();
